moved fetch to app to avoid rendering on blog load, css adjustment to jumping up scroll on shorter pages

--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
 body {
   background: rgb(83, 83, 83);
   color: white;
-  height: 100%;
+  height: 150vh;
 }
 
 .banner {
